--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -13,14 +13,15 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "ts-jest": "^29.3.2",
+    "jest": "^29.7.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "fastify": "^5.3.2",
     "firebase": "^11.6.1",
-    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
-    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "zod": "^3.24.3"
   }
