--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -14,11 +14,12 @@
   "description": "",
   "devDependencies": {
     "@types/jest": "^29.5.14",
-    "ts-jest": "^29.3.2",
     "jest": "^29.7.0",
+    "ts-jest": "^29.3.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
     "fastify": "^5.3.2",
     "firebase": "^11.6.1",
     "nodemon": "^3.1.10",
