--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -22,6 +22,7 @@
     "@fastify/cors": "^11.0.1",
     "fastify": "^5.3.2",
     "firebase": "^11.6.1",
+    "firebase-admin": "^13.3.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "zod": "^3.24.3"
