--- a/write-service/package.json
+++ b/write-service/package.json
@@ -13,15 +13,17 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/amqplib": "^0.10.7",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
+    "amqplib": "^0.10.8",
     "mongoose": "^8.13.2",
-    "mqtt": "^5.10.4"
+    "mqtt": "^5.10.4",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2"
   }
 }
