--- a/retrive-service/package.json
+++ b/retrive-service/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
     "fastify": "^5.2.2",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.10",
