--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,6 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # vitepress build output
 **/.vitepress/dist
@@ -145,5 +144,7 @@ cov
 .DS_Store
 
 .vscode
+
+.idea
 
 compose-var.env
